A bunch of new strings OwO

--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -28,6 +28,7 @@ commands:
         emojiFight: "rinha de emojis"
     raffle:
       lastWinner: "Último ganhador: {0} ({1} Sonhos; {2} Prêmio Final)"
+      description: "Aposte seus sonhos na minha rifa!"
     scratchcard:
       description: "Está com sorte? Então compre uma Raspadinha da Loritta. Talvez se a sua sorte for grande, você irá conseguir dobrar ou até quadriplicar a sua quantidade de sonhos!"
     scratchcardtop:
@@ -40,20 +41,21 @@ commands:
       otherAccountNeedsToGetDaily: "Parece que {0} ainda não pegou o daily hoje, {1} só poderá receber sonhos após ter pego o daily hoje. Que tal ele pegar agora? {2}"
       youAreGoingToTransfer: "Você está prestes a transferir {0} sonhos para {1}!{2}"
       randomQuirkyRichMessages:
-      - "Está querendo ostentar que você é rico transferindo tanto dinheiro assim?"
-      - "Ser rico é legal, mas comprar Loritta Premium que é bom, nada né?"
-      - "iala olha o rico kkk"
-      - "Queria ser tão rica assim para transferir tantos sonhos assim..."
-      - "Nossa, mas transferir humildes 100k para mim você não transfere, né?"
-      - "Saudades daqueles sonhos que a gente nunca teve"
-      - "Nossa mas vai transferir tudo isso? Vai ficar pobre rsrs"
-      - "Se depois quiser repor esses sonhos perdidos, que tal comprar sonhos na minha loja?"
-      - "kk eae que tal transferir um pouquinho para mim também?"
-      - "Depois dessa você vai ter que dormir para conseguir mais sonhos rsrs... entendeu a piada? hein?"
-      - "Eu também amo sonhos, mas mesmo assim não sou Robin Hood para ficar distribuindo meu dinheiro"
-      - "Não tenho inveja desses sonhos, se eu quisesse eu poderia dar a mesma quantidade para mim!"
+        - "Está querendo ostentar que você é rico transferindo tanto dinheiro assim?"
+        - "Ser rico é legal, mas comprar Loritta Premium que é bom, nada né?"
+        - "iala olha o rico kkk"
+        - "Queria ser tão rica assim para transferir tantos sonhos assim..."
+        - "Nossa, mas transferir humildes 100k para mim você não transfere, né?"
+        - "Saudades daqueles sonhos que a gente nunca teve"
+        - "Nossa mas vai transferir tudo isso? Vai ficar pobre rsrs"
+        - "Se depois quiser repor esses sonhos perdidos, que tal comprar sonhos na minha loja?"
+        - "kk eae que tal transferir um pouquinho para mim também?"
+        - "Depois dessa você vai ter que dormir para conseguir mais sonhos rsrs... entendeu a piada? hein?"
+        - "Eu também amo sonhos, mas mesmo assim não sou Robin Hood para ficar distribuindo meu dinheiro"
+        - "Não tenho inveja desses sonhos, se eu quisesse eu poderia dar a mesma quantidade para mim!"
       clickToAcceptTheTransaction: "Para confirmar a transação, você e {0} devem clicar em {1}!"
       doYouThinkImPoor: "Você *acha* que eu sou pobre para transferir só isso para mim? Não sou mendiga para aceitar essa merrequinha aí. 2bj"
+      description: "Lembra daquela paçoca que o seu amigo tinha te comprado? Que tal pagar ela usando a minha economia? \U0001F609"
     flipcoinbet:
       description: "O clássico \"Gire uma moeda e veja se irá cair cara ou coroa!\", mas agora envolvendo sonhos! Não me responsabilizo se você perder tudo em apostas"
       startBet: "{0}, {1} quer fazer uma aposta com você! Cada um irá pagar **{5} sonhos ({6} sonhos de taxa para jogar rs)**. Se cair **{2}**, você irá ganhar **{3} sonhos**, se cair **{4}**, {1} irá ganhar **{3} sonhos**! E aí, vai encarar?"
@@ -79,13 +81,13 @@ commands:
       invalidTickerId: "Ticker ID inexistente"
       title: "Preços de Ações"
       explanation:
-      - "Compre ações quando estão na baixa, venda ações quando estiverem em alta! Enquanto você não vai ganhar ou perder dinheiro real se você comprar ou vender ações, o sentimento de você ter perdido sonhos em uma ação é o mesmo. {4}"
-      - ""
-      - "**Você pode comprar ações utilizando** `{0}`"
-      - "**Você pode vender ações utilizando** `{1}`"
-      - "**Para ver seu portfólio de ações, use** `{2}`"
-      - ""
-      - "Tickers com {3} estão inativos pois a bolsa está fechada, você apenas pode comprar/vender ações quando a ação está ativa!"
+        - "Compre ações quando estão na baixa, venda ações quando estiverem em alta! Enquanto você não vai ganhar ou perder dinheiro real se você comprar ou vender ações, o sentimento de você ter perdido sonhos em uma ação é o mesmo. {4}"
+        - ""
+        - "**Você pode comprar ações utilizando** `{0}`"
+        - "**Você pode vender ações utilizando** `{1}`"
+        - "**Para ver seu portfólio de ações, use** `{2}`"
+        - ""
+        - "Tickers com {3} estão inativos pois a bolsa está fechada, você apenas pode comprar/vender ações quando a ação está ativa!"
       buyExample: "{0}corretora comprar Ticker Quantidade"
       sellExample: "{0}corretora vender Ticker Quantidade"
       portfolioExample: "{0}corretora portfólio"
@@ -124,40 +126,41 @@ commands:
       sonhos:
         one: "sonho"
         multiple: "sonhos"
+      description: "Veja quantos sonhos você tem!"
     guessnumber:
       description: "Chute um número de 1 até 10, se for o número que eu estou pensando, eu irei te recompensar com sonhos! Mas se você perder... aí você que terá que me dar sonhos."
       youWin: "Parabéns, você acertou o número que eu estava pensando! Como recompensa, eu te **dei {0} sonhos**!"
       notEnoughSonhos: "Você não tem sonhos suficientes para adivinhar um número!"
       youLose:
-      - "Que pena, eu estava pensando no número {0}... Você **perdeu {1} sonhos**!"
-      - "Eu *poderia* ter pensado no seu número, mas eu pensei em {0}... Você **perdeu {1} sonhos**!"
-      - "Acho que a sorte *não* está do seu lado, eu pensei em {0}... Você **perdeu {1} sonhos**!"
-      - "Pensei em vários números diferentes mas gostei mais do {0}... Você **perdeu {1} sonhos**!"
-      - "Parabéns, você errou o número! Eu estava pensando em {0}... Você **perdeu {1} sonhos**!"
-      - "Você perdeu, eu ganhei! O número era {0} e você **perdeu {1} sonhos**!"
-      - "Sabia que eu gostei do número {0}? Você **perdeu {1} sonhos**!"
-      - "Não existe bug, você só não tem sorte bb. Eu pensei no número {0} e você **perdeu {1} sonhos**!"
-      - "Faça aí a sua mágica para ter sorte, pois você está sem sorte hoje! Eu pensei no número {0} e você **perdeu {1} sonhos**!"
-      - "Você chegou perto, maaaaas não foi dessa vez amigue! Eu pensei no número {0} e, já que eu ganhei, você **perdeu {1} sonhos**!"
+        - "Que pena, eu estava pensando no número {0}... Você **perdeu {1} sonhos**!"
+        - "Eu *poderia* ter pensado no seu número, mas eu pensei em {0}... Você **perdeu {1} sonhos**!"
+        - "Acho que a sorte *não* está do seu lado, eu pensei em {0}... Você **perdeu {1} sonhos**!"
+        - "Pensei em vários números diferentes mas gostei mais do {0}... Você **perdeu {1} sonhos**!"
+        - "Parabéns, você errou o número! Eu estava pensando em {0}... Você **perdeu {1} sonhos**!"
+        - "Você perdeu, eu ganhei! O número era {0} e você **perdeu {1} sonhos**!"
+        - "Sabia que eu gostei do número {0}? Você **perdeu {1} sonhos**!"
+        - "Não existe bug, você só não tem sorte bb. Eu pensei no número {0} e você **perdeu {1} sonhos**!"
+        - "Faça aí a sua mágica para ter sorte, pois você está sem sorte hoje! Eu pensei no número {0} e você **perdeu {1} sonhos**!"
+        - "Você chegou perto, maaaaas não foi dessa vez amigue! Eu pensei no número {0} e, já que eu ganhei, você **perdeu {1} sonhos**!"
       numberNotInRange: "Você precisa colocar um número entre 1 e 10 para participar! A não ser se você quer perder sonhos colocando um número que eu jamais irei pensar."
     emojifight:
       description: "Faça uma rinha de emojis com os seus amigos, o emoji mais forte ganha a rinha!"
       fightTitle: "Rinha de Emoji"
       fightDescription:
-      - "**Preço para participar da rinha:** Nada! É uma rinha apenas para se divertir! {0}"
-      - "**Prêmio:** Nada! Se está procurando prêmios, vá em `{1}emojifight bet`"
-      - "**Para participar**, clique em {2}! *(Limite de 30 jogadores)*"
-      - "O ganhador será revelado quando {3} clicar em {4} ou após ter passado 60 segundos desde o início da rinha ou quando tiver 30 players na partida!"
+        - "**Preço para participar da rinha:** Nada! É uma rinha apenas para se divertir! {0}"
+        - "**Prêmio:** Nada! Se está procurando prêmios, vá em `{1}emojifight bet`"
+        - "**Para participar**, clique em {2}! *(Limite de 30 jogadores)*"
+        - "O ganhador será revelado quando {3} clicar em {4} ou após ter passado 60 segundos desde o início da rinha ou quando tiver 30 players na partida!"
       participants: "Participantes ({0}):"
       wonBet: "O {0} de {1} saiu vitorioso na rinha! Obrigada a todos os emojis que lutaram na rinha, eles agora estão descansando para a próxima rinha!"
       needsMorePlayers: "Infelizmente tivemos que cancelar a rinha por falta de usuários na rinha..."
     emojifightbet:
       description: "Faça uma rinha de emojis com os seus amigos valendo sonhos, o emoji mais forte ganha a rinha!"
       fightDescription:
-      - "**Preço para participar da rinha:** {0} sonhos"
-      - "**Prêmio:** {1} sonhos"
-      - "**Para participar**, clique em {2}! *(Limite de 30 jogadores)*"
-      - "O ganhador será revelado quando {3} clicar em {4} ou após ter passado 60 segundos desde o início da rinha ou quando tiver 30 players na partida!"
+        - "**Preço para participar da rinha:** {0} sonhos"
+        - "**Prêmio:** {1} sonhos"
+        - "**Para participar**, clique em {2}! *(Limite de 30 jogadores)*"
+        - "O ganhador será revelado quando {3} clicar em {4} ou após ter passado 60 segundos desde o início da rinha ou quando tiver 30 players na partida!"
       wonBetTaxed: "O {0} de {1} saiu vitorioso na rinha! Como recompensa, **{1} ganhou {2} sonhos** ({3} de taxa) e os {4} perdedores perderam {5} sonhos!"
       wonBet: "O {0} de {1} saiu vitorioso na rinha! Como recompensa, **{1} ganhou {2} sonhos** e os {4} perdedores perderam {5} sonhos!"
     flipcoinbetstats:
